# pokemon-sim-engine

./: .gitignore  GEMINI.md  LICENSE  README.md  battle_graph.gv  pyproject.toml  run_ui_battle.py
envs/pokemon/: action.py  agent.py  battle.py  config.py  item.py  move.py  play.py  pokemon.py  pokemon_type.py  trainer.py  ui.py
src/: playground.py  quick_start.py  run_ui_battle.py  test.py
src/pokemon/: __init__.py  action.py  agent.py  battle.py  battle_graph.py  battle_registry.py  config.py  glicko2.py  item.py  loguru_logger.py  message.py  move.py  play.py  pokemon.py  pokemon_status.py  pokemon_type.py  tensor_cache.py  trainer.py  ui.py
src/pokemon/agents/: __init__.py  base_agent.py  evaluation.py  heuristic.py  search.py  simple.py
tests/: test_action.py  test_battle.py  test_battle_state.py  test_item.py  test_move.py  test_performance.py  test_play.py  test_pokemon.py  test_pokemon_type.py  test_tensor_cache.py  test_trainer.py
