[project]
name = "pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "colorama>=0.4.6",
  "line-profiler>=5.0.0",
  "numpy>=2.3.4",
  "pympler>=1.1",
  "tabulate>=0.9.0",
  "tqdm>=4.67.1",
  "torch",
  "torchvision",
  "markupsafe>=3.0.3",
  "matplotlib>=3.10.7",
  "trueskill>=0.4.5",
  "loguru>=0.7.3",
  "ruff>=0.14.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.2", "pytest-benchmark>=4.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pokemon*"]


[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["src"]
