[project]
name = "pokemon-sim-engine"
version = "0.1.0"
description = "A comprehensive Pokemon battle simulation engine optimized for Reinforcement Learning and AI research."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Eliott Crancée", email = "crancee.eliott@gmail.com" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment :: Simulation",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "colorama>=0.4.6",
  "line-profiler>=5.0.0",
  "numpy>=2.3.4",
  "pympler>=1.1",
  "tabulate>=0.9.0",
  "tqdm>=4.67.1",
  "torch",
  "torchvision",
  "markupsafe>=3.0.3",
  "matplotlib>=3.10.7",
  "trueskill>=0.4.5",
  "loguru>=0.7.3",
  "ruff>=0.14.4",
  "joblib>=1.5.2",
]

[project.urls]
Homepage = "https://github.com/eliottcrancee/pokemon-sim-engine"
Repository = "https://github.com/eliottcrancee/pokemon-sim-engine"
Issues = "https://github.com/eliottcrancee/pokemon-sim-engine/issues"

[project.optional-dependencies]
dev = ["pytest>=8.3.2", "pytest-benchmark>=4.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokemon"]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["src"]
