[project]
name = "pokemon-sim-engine"
version = "0.1.0"
description = "A comprehensive Pokemon battle simulation engine optimized for Reinforcement Learning and AI research."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Eliott Crancée", email = "crancee.eliott@gmail.com" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment :: Simulation",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "colorama>=0.4.6",
  "numpy>=2.3.5",
  "tqdm>=4.67.1",
  "loguru>=0.7.3",
  "joblib>=1.5.2",
  "numba>=0.62.1",
  "readchar>=4.2.1",
]

[project.urls]
Homepage = "https://github.com/eliottcrancee/pokemon-sim-engine"
Repository = "https://github.com/eliottcrancee/pokemon-sim-engine"
Issues = "https://github.com/eliottcrancee/pokemon-sim-engine/issues"

[project.optional-dependencies]
dev = [
  "matplotlib>=3.10.7",
  "pympler>=1.1",
  "pytest>=9.0.1",
  "pytest-benchmark>=4.0.0",
  "seaborn>=0.13.2",
  "snakeviz>=2.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokemon"]

[tool.pytest.ini_options]
pythonpath = ["src"]
